src/objects/CandidateReview__c.object
<CustomObject>
    <description>Review about the candidate</description>
    <fields>
        <fullName>Assessment__c</fullName>
        <description>Assessment of candidate based on review</description>
        <inlineHelpText>Assessment of candidate based on review</inlineHelpText>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <description>Candidate info</description>
        <inlineHelpText>Candidate info</inlineHelpText>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>CandidateReviews</relationshipLabel>
        <relationshipName>CandidateReviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>hows candidate rating based on candidate review field</description>
        <inlineHelpText>hows candidate rating based on candidate review field</inlineHelpText>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CandidateReview</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>CandidateReviewNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CandidateReviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Scale_Rule</fullName>
        <active>true</active>
        <description>Rating should be between 1-5</description>
        <errorConditionFormula>OR( Rating__c  &lt; 1, Rating__c  &gt; 5)</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Rating should be between 1-5</errorMessage>
    </validationRules>
</CustomObject>